--- a/questions.html
+++ b/questions.html
@@ -7,43 +7,43 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
-<body class="bg-gray-200 h-screen flex flex-col justify-center items-center">
-    <div class="bg-white w-full max-w-xl rounded-lg shadow-md p-6">
+<body class="bg-gray-900 h-screen flex flex-col justify-center items-center">
+    <div class="bg-gray-800 w-full max-w-xl rounded-lg shadow-md p-6">
         <!-- Header -->
         <div class="flex justify-between items-center mb-4">
-            <div class="text-xl font-bold text-gray-800">200</div>
-            <div class="text-2xl font-bold">Fantasy Quiz #156</div>
-            <button id="cross" class="w-10 h-10 flex items-center justify-center bg-red-100 rounded-full hover:bg-red-200">
+            <div class="text-xl font-bold text-blue-600">200</div>
+            <div class="text-2xl font-bold text-white">Fantasy Quiz #156</div>
+            <button id="cross" class="w-10 h-10 flex items-center justify-center bg-gray-700 rounded-full hover:bg-white">
                 <i class="fas fa-times text-red-500"></i>
             </button>
         </div>
 
         <!-- Question -->
         <div class="text-center mb-6">
-            <h1 class="text-xl font-bold text-gray-800">PREDICT THE TOP LOSER (for tomorrow) across these indices</h1>
+            <h1 class="text-xl font-bold text-white">PREDICT THE TOP LOSER (for tomorrow) across these indices</h1>
         </div>
 
         <!-- Options -->
         <div class="space-y-4">
-            <div class="flex items-center bg-gray-100 p-4 rounded-lg">
+            <div class="flex items-center bg-gray-600 p-4 rounded-lg">
                 <div class="w-10 h-10 flex items-center justify-center bg-gray-300 rounded-full font-bold">A</div>
                 <div class="flex-1 ml-4">
-                    <h2 class="font-bold">NIFTY50</h2>
-                    <p class="text-gray-600">&#8377;17,356, <span class="text-red-500">-0.31%</span></p>
+                    <h2 class="font-bold ">NIFTY50</h2>
+                    <p class="text-gray-200">&#8377;17,356, <span class="text-red-500">-0.31%</span></p>
                 </div>
             </div>
-            <div class="flex items-center bg-gray-100 p-4 rounded-lg">
+            <div class="flex items-center bg-gray-600 p-4 rounded-lg">
                 <div class="w-10 h-10 flex items-center justify-center bg-gray-300 rounded-full font-bold">B</div>
                 <div class="flex-1 ml-4">
                     <h2 class="font-bold">NIFTYNEXT50</h2>
-                    <p class="text-gray-600">&#8377;56,226, <span class="text-red-500">-0.31%</span></p>
+                    <p class="text-gray-200">&#8377;56,226, <span class="text-red-500">-0.31%</span></p>
                 </div>
             </div>
-            <div class="flex items-center bg-gray-100 p-4 rounded-lg">
+            <div class="flex items-center bg-gray-600 p-4 rounded-lg">
                 <div class="w-10 h-10 flex items-center justify-center bg-gray-300 rounded-full font-bold">C</div>
                 <div class="flex-1 ml-4">
                     <h2 class="font-bold">NIFTYBANK</h2>
-                    <p class="text-gray-600">&#8377;17,356, <span class="text-green-500">+2.12%</span></p>
+                    <p class="text-gray-200">&#8377;17,356, <span class="text-green-500">+2.12%</span></p>
                 </div>
             </div>
         </div>
@@ -53,7 +53,7 @@
             <div class="relative w-full h-3 bg-gray-300 rounded-full">
                 <div class="absolute top-0 left-0 h-full w-1/5 bg-green-500 rounded-full"></div>
             </div>
-            <p class="text-center font-bold mt-2">1/5</p>
+            <p class="text-center font-bold mt-2 text-white">1/5</p>
             <button class="mt-4 w-full bg-green-500 text-white font-semibold py-2 px-4 rounded-lg hover:bg-green-600">CONTINUE</button>
         </div>
     </div>
