--- a/questions.html
+++ b/questions.html
@@ -12,15 +12,15 @@
         <!-- Header -->
         <div class="flex justify-between items-center mb-4">
             <div class="text-xl font-bold text-blue-600">200</div>
-            <div class="text-2xl font-bold text-white">Fantasy Quiz #156</div>
-            <button id="cross" class="w-10 h-10 flex items-center justify-center bg-gray-700 rounded-full hover:bg-white">
-                <i class="fas fa-times text-red-500"></i>
+            <div class="text-2xl font-bold text-white">HTML Quiz #1</div>
+            <button id="cross" class="w-10 h-10 p-2 flex items-center justify-center bg-gray-700 rounded-full hover:bg-white">
+                <img src="./images/cross.png" alt="">
             </button>
         </div>
 
         <!-- Question -->
         <div class="text-center mb-6">
-            <h1 class="text-xl font-bold text-white">PREDICT THE TOP LOSER (for tomorrow) across these indices</h1>
+            <h1 class="text-xl font-bold text-white">What does HTML stand for?</h1>
         </div>
 
         <!-- Options -->
@@ -28,22 +28,25 @@
             <div class="flex items-center bg-gray-600 p-4 rounded-lg">
                 <div class="w-10 h-10 flex items-center justify-center bg-gray-300 rounded-full font-bold">A</div>
                 <div class="flex-1 ml-4">
-                    <h2 class="font-bold ">NIFTY50</h2>
-                    <p class="text-gray-200">&#8377;17,356, <span class="text-red-500">-0.31%</span></p>
+                    <p class="text-gray-200">Hyper Text Markup Language</p>
                 </div>
             </div>
             <div class="flex items-center bg-gray-600 p-4 rounded-lg">
                 <div class="w-10 h-10 flex items-center justify-center bg-gray-300 rounded-full font-bold">B</div>
                 <div class="flex-1 ml-4">
-                    <h2 class="font-bold">NIFTYNEXT50</h2>
-                    <p class="text-gray-200">&#8377;56,226, <span class="text-red-500">-0.31%</span></p>
+                    <p class="text-gray-200">High Text Markup Language</p>
                 </div>
             </div>
             <div class="flex items-center bg-gray-600 p-4 rounded-lg">
                 <div class="w-10 h-10 flex items-center justify-center bg-gray-300 rounded-full font-bold">C</div>
                 <div class="flex-1 ml-4">
-                    <h2 class="font-bold">NIFTYBANK</h2>
-                    <p class="text-gray-200">&#8377;17,356, <span class="text-green-500">+2.12%</span></p>
+                    <p class="text-gray-200">Hyperlinks and Text Markup Language</p>
+                </div>
+            </div>
+            <div class="flex items-center bg-gray-600 p-4 rounded-lg">
+                <div class="w-10 h-10 flex items-center justify-center bg-gray-300 rounded-full font-bold">C</div>
+                <div class="flex-1 ml-4">
+                    <p class="text-gray-200">None of the above</p>
                 </div>
             </div>
         </div>
