some design add

--- a/questions.html
+++ b/questions.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
-<body class="bg-gray-900 h-screen flex flex-col justify-center items-center">
+<body class="bg-gray-900 h-screen my-20 flex flex-col justify-center items-center">
     <div class="bg-gray-800 w-full max-w-xl rounded-lg shadow-md p-6">
         <!-- Header -->
         <div class="flex justify-between items-center mb-4">
