--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-900 min-h-screen flex flex-col">
     <!-- Header -->
-    <header class="flex justify-between items-center bg-gray-800 px-24 py-4 shadow-md shadow-gray-400 sticky top-0 z-10">
+    <header class="flex justify-between items-center bg-gray-800 px-4 md:px-24 py-4 shadow-md shadow-gray-400 sticky top-0 z-10">
         <div class="flex items-center space-x-2">
             <div class="text-green-600 text-2xl">
                 <i class="fas fa-question-circle"></i>
@@ -17,13 +17,12 @@
         </div>
         <div class="flex items-center space-x-4">
             <p class="text-gray-100">Welcome: <span class="font-bold">quizUser</span></p>
-            <p class="text-green-600 font-bold">0 XP</p>
             <button class="bg-slate-700 text-white py-2 px-4 rounded hover:bg-slate-600">Log out</button>
         </div>
     </header>
 
     <!-- Main Content -->
-    <main class="p-6 px-24 py-14 flex-grow">
+    <main class="p-6 px-6 md:px-24 py-14 flex-grow">
         <h2 class="text-lg font-bold text-white mb-4">My Quizzes</h2>
 
         <div id="quiz-cards-wrapper" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
@@ -31,12 +30,12 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-gray-800 py-4 px-24 shadow-inner shadow-gray-600">
-        <div class="flex justify-between text-white py-4">
+    <footer class="bg-gray-800 py-4 px-4 md:px-24 shadow-inner shadow-gray-600">
+        <div class="flex flex-col md:flex-row justify-between items-center text-white py-4">
             <p class="text-sm md:text-base">
                 &copy; 2024 <span class="font-semibold">Quiz Spark</span>. All rights reserved.
             </p>
-            <p class="text-xs md:text-sm mt-2">
+            <p class="mt-2">
                 Design and Developed by <span class="font-semibold">Visionary WebCraft</span>
             </p>
         </div>
