--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body class="bg-gray-900 min-h-screen flex flex-col">
     <!-- Header -->
@@ -41,6 +42,6 @@
         </div>
     </footer>
 
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="./assets/js/app.js"></script>
 </body>
 </html>
