signup and signin complete with firebase

--- a/signup.html
+++ b/signup.html
@@ -109,7 +109,7 @@
 
         <!-- Submit Button -->
         <button
-          id="submit"
+          id="signup"
           class="w-full flex items-center justify-center bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none"
         >
           Sign Up
@@ -117,15 +117,15 @@
         <p class="mt-4 text-center text-sm text-white">
           Already have an account?
           <a
-            href="#"
+            href="./signin.html"
             class="text-white font-bold outline-none hover:text-indigo-500"
-            >Log in</a
+            >Sign In</a
           >
         </p>
       </form>
     </div>
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
-    <script src="./assets/js/signup.js" type="module"></script>
+    <script src="./assets/js/auth.js" type="module"></script>
   </body>
 </html>
