--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
             <h1 class="text-xl font-bold text-white">Quiz <span class="text-green-500">Master</span></h1>
         </div>
         <div class="flex items-center space-x-4">
-            <p class="text-gray-100">Welcome: <span class="font-bold">quizUser</span></p>
-            <button class="bg-slate-700 text-white py-2 px-4 rounded hover:bg-slate-600">Log out</button>
+            <a class="bg-slate-700 text-white py-2 px-4 rounded hover:bg-slate-600" href="./signup.html">Sign Up</a>
         </div>
     </header>
 
